# XAITutor

./: .dockerignore  .env.example  .env.example_CN  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Communication.md  DEPLOYMENT_UBUNTU_DOCKER_MULTI_USER.md  Dockerfile  LICENSE  README.md  SKILL.md  XAITUTOR_DOCKER_DEPLOYMENT.md  XAITUTOR_REVERSE_TUNNEL.md  docker-compose.dev.yml  docker-compose.ghcr.yml  docker-compose.yml  pyproject.toml  requirements.txt  test.docx
assets/README/: README_AR.md  README_CN.md  README_ES.md  README_FR.md  README_HI.md  README_JA.md  README_PL.md  README_PT.md  README_RU.md  README_TH.md
assets/releases/: ver-1-0-0-beta1.md  ver0-3-0.md  ver0-4-0.md  ver0-4-1.md  ver0-5-0.md  ver0-5-1.md  ver0-5-2.md  ver0-6-0.md  ver1-0-0-beta-2.md  ver1-0-0-beta-3.md  ver1-0-0-beta-4.md  ver1-0-1.md  ver1-0-2.md  ver1-0-3.md  ver1-1-0-beta.md  ver1-1-0.md  ver1-1-1.md  ver1-1-2.md  ver1-2-0.md  ver1-2-1.md  ver1-2-2.md  ver1-2-3.md  ver1-2-4.md  ver1-2-5.md  ver1-3-0.md  ver1-3-1.md  ver1-3-10.md  ver1-3-2.md  ver1-3-3.md  ver1-3-4.md  ver1-3-5.md  ver1-3-6.md  ver1-3-7.md  ver1-3-8.md  ver1-3-9.md
deeptutor/: __main__.py
deeptutor/agents/: __init__.py  base_agent.py
deeptutor/api/: main.py  run_server.py
deeptutor/app/: __init__.py  facade.py
deeptutor/book/: __init__.py  compiler.py  context.py  engine.py  inputs.py  kb_health.py  models.py  storage.py  streaming.py
deeptutor/capabilities/: __init__.py  _answer_now.py  chat.py  competition_consulting.py  deep_guided.py  deep_question.py  deep_research.py  deep_solve.py  math_animator.py  photo_solve.py  request_contracts.py  visualize.py
deeptutor/co_writer/: edit_agent.py  storage.py
deeptutor/config/: accessors.py  constants.py  defaults.py  schema.py  settings.py
deeptutor/core/: __init__.py  capability_protocol.py  context.py  errors.py  stream.py  stream_bus.py  tool_protocol.py  trace.py
deeptutor/events/: __init__.py  event_bus.py
deeptutor/knowledge/: __init__.py  add_documents.py  initializer.py  manager.py  naming.py  progress_tracker.py
deeptutor/logging/: __init__.py  config.py  configure.py  context.py  formatters.py  logger.py  loguru_bridge.py  process_stream.py
deeptutor/multi_user/: __init__.py  audit.py  context.py  grants.py  identity.py  knowledge_access.py  model_access.py  models.py  paths.py  router.py  skill_access.py
deeptutor/runtime/: __init__.py  mode.py  orchestrator.py
deeptutor/services/: __init__.py  auth.py  path_service.py  pocketbase_client.py  provider_registry.py
deeptutor/tools/: __init__.py  brainstorm.py  code_executor.py  paper_search_tool.py  rag_tool.py  reason.py  tex_chunker.py  tex_downloader.py  web_search.py
deeptutor/tutorbot/: __init__.py
deeptutor/utils/: config_manager.py  document_extractor.py  document_validator.py  error_rate_tracker.py  error_utils.py  json_parser.py
deeptutor_cli/: README.md  __init__.py  __main__.py  book.py  bot.py  chat.py  common.py  config_cmd.py  kb.py  main.py  memory.py  notebook.py  plugin.py  provider_cmd.py  session_cmd.py
requirements/: cli.txt  dev.txt  math-animator.txt  matrix-e2e.txt  matrix.txt  server.txt  tutorbot.txt
scripts/: _cli_kit.py  audit_prompts.py  check_install.py  extract_numbered_items.sh  generate_roster.py  migrate_kb.py  migrate_user_data.py  pb_setup.py  start_tour.py  start_web.py  stop_web.py  sync_prompts_from_en.py  test_embedding.py  test_llm_api.py  update.py
tests/: conftest.py  test_matrix_requirements.py  test_openrouter_provider.py
tests/agents/: test_base_agent_binding.py
tests/api/: test_cors_settings.py  test_knowledge_router.py  test_main_notebook_router.py  test_memory_router.py  test_notebook_router.py  test_question_router.py  test_selective_access_log.py  test_settings_router.py  test_solve_router.py  test_system_router.py  test_tutorbot_channel_schema.py  test_tutorbot_router.py  test_unified_ws_turn_runtime.py
tests/book/: test_context.py  test_engine_controls.py  test_llm_writer.py
tests/capabilities/: test_answer_now.py  test_photo_solve.py  test_rag_consistency.py
tests/cli/: test_chat_cli.py  test_common.py  test_kb_cli.py  test_notebook_cli.py  test_provider_cli.py
tests/core/: test_builtin_tools.py  test_capabilities_runtime.py  test_code_executor_safety.py  test_config_manager.py  test_context.py  test_math_animator_capability.py  test_prompt_manager.py  test_prompt_parity.py  test_stream_bus.py  test_turn_event_store.py
tests/knowledge/: test_kb_directory_layout.py  test_manager_delete.py  test_manager_embedding_flags.py  test_manager_get_info_status.py  test_naming.py  test_progress_tracker.py
tests/logging/: test_configure.py  test_context.py  test_loguru_bridge.py  test_process_logs.py  test_task_log_stream.py
tests/multi_user/: conftest.py  test_grants_and_settings.py  test_identity_and_paths.py  test_rag_tool_no_kb_fallback.py  test_registration_invite_only.py  test_settings_status_redaction.py  test_skill_resolution_scoped.py  test_ui_language_scoping.py
tests/runtime/: test_orchestrator.py
tests/scripts/: test_cli_kit.py  test_start_tour.py  test_start_web.py  test_update.py
tests/services/: __init__.py  test_app_facade.py  test_config_loader.py  test_model_catalog.py  test_notebook_service.py  test_path_service.py  test_prompt_manager.py  test_provider_registry.py  test_runtime_storage_guard.py
tests/tools/: test_code_executor.py  test_question_extractor.py  test_rag_tool.py  test_web_search.py
tests/utils/: test_circuit_breaker.py  test_document_extractor.py  test_document_validator.py  test_json_parser.py
web/: eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
web/app/: globals.css  (+1 more)
web_new/: .env.local.example  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
web_v1/: .prettierignore  .prettierrc.json  eslint.config.mjs  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node-tests.json
(+957 files in other folders)
